--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -1,27 +1,51 @@
-app = 'midday-api'
+# Fly.io Configuration for Midday API
+# =====================================
+# IMPORTANT: This file should be at the REPOSITORY ROOT
+# Or specify the path in Fly.io dashboard
+#
+# Deployment Settings in Fly.io Dashboard:
+#   - Dockerfile Path: apps/api/Dockerfile
+#   - Build Context: . (repository root)
+
+app = 'your-midday-api'  # CHANGE THIS to your app name
 primary_region = 'fra'
 
 [build]
+  # Dockerfile is relative to repository root
+  dockerfile = "apps/api/Dockerfile"
 
 [env]
   PORT = '8080'
+  NODE_ENV = 'production'
+  TZ = 'UTC'
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'off'
+  auto_stop_machines = 'suspend'
   auto_start_machines = true
-  min_machines_running = 6
+  min_machines_running = 1
   processes = ['app']
 
+  [http_service.concurrency]
+    type = "requests"
+    hard_limit = 250
+    soft_limit = 200
+
   [[http_service.checks]]
-    grace_period = "10s"
-    interval = "45s"
+    grace_period = "30s"
+    interval = "30s"
     method = "GET"
     timeout = "10s"
     path = "/health"
 
 [[vm]]
-  memory = '4gb'
+  memory = '1gb'
   cpu_kind = 'shared'
-  cpus = 2
+  cpus = 1
+
+# For production, consider scaling up:
+# [[vm]]
+#   memory = '2gb'
+#   cpu_kind = 'shared'
+#   cpus = 2
