--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,6 +1,8 @@
 # Midday API Dockerfile
-# Optimized for Fly.io GitHub deployment
-# Deploy from repository ROOT with Dockerfile path: apps/api/Dockerfile
+# ======================
+# This Dockerfile is located at: apps/api/Dockerfile
+# It's referenced from fly.toml at the repository root
+# Build context is the repository root (for monorepo access)
 
 # Base image with Bun
 FROM oven/bun:1.2.22 AS base
@@ -13,17 +15,18 @@ RUN bun add -g turbo
 FROM turbo-cli AS builder
 WORKDIR /app
 
-# Copy all files from the repository root
+# Copy all files from the repository root (build context)
 COPY . .
 
 # Use turbo CLI to prune workspaces - creates optimized /out directory
+# This extracts only the packages needed for @midday/api
 RUN turbo prune @midday/api --docker
 
 # Installer stage - install dependencies and build
 FROM base AS installer
 WORKDIR /app
 
-# Install build dependencies for native modules (canvas, etc.)
+# Install build dependencies for native modules (canvas, sharp, etc.)
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
@@ -33,20 +36,20 @@ RUN apt-get update && apt-get install -y \
     libjpeg-dev \
     libgif-dev \
     librsvg2-dev \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy pruned package.json files first (for better caching)
+# Copy pruned package.json files first (for better Docker layer caching)
 COPY --from=builder /app/out/json/ .
 
 # Install dependencies
-RUN bun install
+RUN bun install --frozen-lockfile || bun install
 
 # Copy the full pruned source code
 COPY --from=builder /app/out/full/ .
 
-# Build the engine package (required by API)
-# This creates the dist folder that the API imports
-RUN cd apps/engine && bun run build || echo "Engine build skipped or not needed"
+# Build the engine package if it exists (required by API for type imports)
+RUN if [ -d "apps/engine" ]; then cd apps/engine && bun run build; fi
 
 # Runner stage
 FROM installer AS runner
@@ -58,12 +61,8 @@ WORKDIR /app/apps/api
 ENV NODE_ENV=production
 ENV PORT=8080
 
-# Expose the port (Fly.io expects 8080 by default)
+# Expose the port (Fly.io uses 8080 by default)
 EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8080/health || exit 1
 
 # Run the API directly with Bun
 CMD ["bun", "run", "src/index.ts"]
