--- a/fly.toml
+++ b/fly.toml
@@ -1,39 +1,23 @@
-# Fly.io Configuration for Midday API
-# =====================================
-# Place this file AND the Dockerfile at the repository root
+# fly.toml app configuration file generated for midday-d6q8tq on 2025-12-19T10:19:18Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "midday-api"
-primary_region = "fra"
+app = 'midday-d6q8tq'
+primary_region = 'iad'
 
 [build]
-  # Dockerfile is at repository root, no path needed
-
-[env]
-  PORT = "8080"
-  NODE_ENV = "production"
-  TZ = "UTC"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = "suspend"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-  processes = ["app"]
-
-  [http_service.concurrency]
-    type = "requests"
-    hard_limit = 250
-    soft_limit = 200
-
-  [[http_service.checks]]
-    grace_period = "30s"
-    interval = "30s"
-    method = "GET"
-    timeout = "10s"
-    path = "/health"
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  memory = "1gb"
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
