--- a/apps/dashboard/vercel.json
+++ b/apps/dashboard/vercel.json
@@ -4,9 +4,7 @@
   "github": {
     "enabled": false
   },
-  "regions": [
-    "fra1"
-  ],
+  "regions": ["fra1"],
   "headers": [
     {
       "source": "/_next/static/:path*",
